# ethelo-engine-os

./: .gitignore  .gitmodules  CMakeLists.txt  Contributor License.txt  Copyright Notice.txt  Dockerfile  README.md  docker-compose.yml
api/: CMakeLists.txt  api.hpp  file_solver.cpp  file_solver.hpp  interface.cpp  interface.hpp  json_serialization.cpp  json_serialization.hpp  md5.hpp  runner.cpp  serialization.cpp  serialization.hpp  structures.hpp
api/tests/: complex_decision_tests.cpp  preproc_tests.cpp  save_load_tests.cpp
api/tests/fixtures/budget_decision_full_vote/: config.json  decision.json  influents.json
api/tests/fixtures/budget_decision_partial_vote_with_xors/: config.json  decision.json  influents.json  weights.json
api/tests/fixtures/carbon_budget/: config.json  decision.json  influents.json  weights.json
api/tests/fixtures/granting_process/: config.json  decision.json  influents.json  weights.json
api/tests/fixtures/tax_assessment_personal_partial_vote/: config.json  decision.json  influents.json  weights.json
bindings/: CMakeLists.txt
bindings/erlang/: .gitignore  CMakeLists.txt  communication.cpp  communication.hpp  conversions.cpp  conversions.hpp  driver.cpp  driver.hpp  engine_processor.cpp  engine_processor.hpp  processor.cpp  processor.hpp  serialization.hpp  util.hpp
engine/: ADShorthands.hpp  CMakeLists.txt  atomic_ethelo.cpp  atomic_ethelo.hpp  configuration.hpp  constraint.cpp  constraint.hpp  criterion.hpp  decision.cpp  decision.hpp  detail.hpp  display.cpp  display.hpp  ethelo.hpp  evaluate.cpp  evaluate.hpp  exception.hpp  expression.cpp  expression.hpp  fragment.cpp  fragment.hpp  mathModelling.hpp  meta.hpp  nuclear_ethelo.cpp  nuclear_ethelo.hpp  option.hpp  problem.cpp  problem.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  stats.hpp  stopwatch.cpp  stopwatch.hpp  util.hpp
engine/MathModel/: AbsNode.cpp  AbsNode.hpp  DivNode.cpp  DivNode.hpp  FixVar_Mask.cpp  FixVar_Mask.hpp  LinExp.cpp  LinExp.hpp  MathExprNode.cpp  MathExprNode.hpp  MathProgram.cpp  MathProgram.hpp  MultNode.cpp  MultNode.hpp  QuadExprNode.cpp  QuadExprNode.hpp  RLT_Mask.cpp  RLT_Mask.hpp  SqrtNode.cpp  SqrtNode.hpp  SumNode.cpp  SumNode.hpp  VarMask.cpp  VarMask.hpp
engine/language/: .gitignore  CMakeLists.txt  expression.g
engine/solvers/: solver_bonmin.cpp  solver_bonmin.hpp  solver_cbc.cpp  solver_cbc.hpp  tminlp_Base.cpp  tminlp_Base.hpp  tminlp_LinMP.cpp  tminlp_LinMP.hpp  tminlp_MP.cpp  tminlp_MP.hpp
engine/tests/: calculate_test_MP.cpp  calculate_tests.cpp  constraint_tests.cpp  expression_tests.cpp  integration_tests.cpp
tools/: entrypoint
